Curve parent bug #45051

Closed
opened 2015-06-12 17:02:13 +02:00 by Alexey · 11 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
1.png
2.png
3.png
4.png
Exact steps for others to reproduce the error
curve parent.blend
open, set parent to 2nd curve, set "curve" type, alt+G - and we will see unneed change of scale

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![1.png](https://archive.blender.org/developer/F190350/1.png) ![2.png](https://archive.blender.org/developer/F190352/2.png) ![3.png](https://archive.blender.org/developer/F190354/3.png) ![4.png](https://archive.blender.org/developer/F190357/4.png) **Exact steps for others to reproduce the error** [curve parent.blend](https://archive.blender.org/developer/F190359/curve_parent.blend) open, set parent to 2nd curve, set "curve" type, alt+G - and we will see unneed change of scale
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscriber: @mont29

Added subscriber: @mont29

Things get wrong even with a mesh parented to a curve this way…

Things get wrong even with a mesh parented to a curve this way…
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Can confirm, i see NaN values in the dimensions buttons right after setting to 'Curve' parent type.

Can confirm, i see NaN values in the `dimensions` buttons right after setting to 'Curve' parent type.
Member

Problem seems to be this switch, which does not handle PARCURVE and PARKEY enum types:
https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object.c$2364

This seems to be old and forgotten code, so i leave it to somebody else to sort out.

Problem seems to be this switch, which does not handle `PARCURVE` and `PARKEY` enum types: https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object.c$2364 This seems to be old and forgotten code, so i leave it to somebody else to sort out.
Bastien Montagne self-assigned this 2015-06-23 12:24:25 +02:00

Actually, PARCURVE and PARKEY are deprecated types which shall never have been exposed to user - PARCURVE is now handled by the curve modifier… Will clean up that code.

Actually, PARCURVE and PARKEY are deprecated types which shall never have been exposed to user - PARCURVE is now handled by the curve modifier… Will clean up that code.

This issue was referenced by b318795c3b

This issue was referenced by b318795c3b3dc3bc274dfb445b4eb11b1fd6257e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 3ece175da3

This issue was referenced by 3ece175da3ddacee30d06322d74a578b4d0de2f4
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45051
No description provided.