source/blender/editors/include/ED_object.h
@@ -77,7 +77,7 @@ typedef enum eParentType {
 	PAR_PATH_CONST,
 	PAR_LATTICE,
 	PAR_VERTEX,
-	PAR_VERTEX_TRI
+	PAR_VERTEX_TRI,
 } eParentType;
 
 #ifdef __RNA_TYPES_H__
